k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extractos
  namespace: extractos
spec:
  selector:
    app: extractos
  ports:
    - port: 5000
      targetPort: 5000
